--- a/package.json
+++ b/package.json
@@ -9,7 +9,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@discordjs/opus": "^0.3.2",
     "discord.js": "^12.2.0",
-    "mongodb": "^3.5.6"
+    "ffmpeg": "0.0.4",
+    "fluent-ffmpeg": "^2.1.2",
+    "html-entities": "^1.3.1",
+    "image-search-google": "^1.3.0",
+    "mongodb": "^3.6.0",
+    "node-fetch": "^2.6.0",
+    "reddit": "^1.2.0",
+    "youtube-search": "^1.1.4",
+    "ytdl-core": "^2.1.7",
+    "ytsr": "^0.1.21"
   }
 }
