--- a/package.json
+++ b/package.json
@@ -9,17 +9,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@discordjs/opus": "^0.3.2",
-    "discord.js": "^12.3.1",
+    "@discordjs/opus": "^0.3.3",
+    "axios": "^0.20.0",
+    "discord.js": "^12.5.1",
     "ffmpeg": "0.0.4",
     "fluent-ffmpeg": "^2.1.2",
-    "html-entities": "^1.3.1",
+    "html-entities": "^1.4.0",
     "image-search-google": "^1.3.0",
-    "mongodb": "^3.6.1",
+    "mongodb": "^3.6.3",
     "node-fetch": "^2.6.1",
-    "reddit": "^1.2.0",
+    "reddit": "^1.2.1",
     "youtube-search": "^1.1.4",
-    "ytdl-core": "^2.1.7",
-    "ytsr": "^0.1.21"
+    "ytdl-core": "^4.2.1",
+    "ytsr": "^2.0.2"
   }
 }
