--- a/package.json
+++ b/package.json
@@ -9,18 +9,23 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@discordjs/opus": "^0.3.3",
-    "axios": "^0.21.1",
-    "discord.js": "^12.5.1",
+    "@discordjs/opus": "^0.4.0",
+    "@discordjs/voice": "^0.6.0",
+    "axios": "^0.21.4",
+    "discord.js": "^13.1.0",
+    "express": "^4.17.1",
     "ffmpeg": "0.0.4",
+    "ffmpeg-static": "^4.4.0",
     "fluent-ffmpeg": "^2.1.2",
     "html-entities": "^1.4.0",
     "image-search-google": "^1.3.0",
-    "mongodb": "^3.6.3",
-    "node-fetch": "^2.6.1",
+    "libsodium-wrappers": "^0.7.9",
+    "mongodb": "^3.7.0",
+    "node-fetch": "^2.6.2",
     "reddit": "^1.2.1",
-    "youtube-search": "^1.1.4",
-    "ytdl-core": "^4.2.1",
+    "youtube-search": "^1.1.6",
+    "ytdl-core": "^4.9.1",
+    "ytpl": "^2.2.3",
     "ytsr": "^2.0.2"
   }
 }
