--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@discordjs/opus": "^0.4.0",
     "@discordjs/voice": "^0.6.0",
     "axios": "^0.21.4",
+    "body-parser": "^1.19.0",
     "discord.js": "^13.1.0",
     "express": "^4.17.1",
     "ffmpeg": "0.0.4",
