--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mongodb": "^3.7.0",
     "node-fetch": "^2.6.2",
     "reddit": "^1.2.1",
+    "youtube-dl-exec": "^2.0.8",
     "youtube-search": "^1.1.6",
     "ytdl-core": "^4.9.1",
     "ytpl": "^2.2.3",
